--- a/main.css
+++ b/main.css
@@ -40,80 +40,118 @@ p {
 }
 #line {
   top: 40%;
-  left: 5%;
+  left: 2%;
   padding: 0.5em;
   width: 15%;
   border-radius: 0.5em;
   outline: none;
   border: none;
-  background-color: purple;
+  background-image: url("pencil.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: 2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   cursor: pointer;
   position: absolute;
 }
 #rect {
   top: 60%;
-  left: 5%;
+  left: 2%;
   padding: 0.5em;
   width: 15%;
   border-radius: 0.5em;
   outline: none;
   border: none;
-  background-color: purple;
+  background-image: url("rect.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: 2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   cursor: pointer;
   position: absolute;
 }
 #circle {
   top: 80%;
-  left: 5%;
+  left: 2%;
   padding: 0.5em;
   width: 15%;
   border-radius: 0.5em;
   outline: none;
   border: none;
-  background-color: purple;
+  background-image: url("circle.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: 2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   cursor: pointer;
   position: absolute;
 }
 #erase {
   top: 40%;
-  right: 5%;
+  right: 2%;
   padding: 0.5em;
   width: 15%;
   border-radius: 0.5em;
   outline: none;
   border: none;
-  background-color: purple;
+  background-image: url("eraser.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: 2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   cursor: pointer;
   position: absolute;
 }
 #clear {
   top: 60%;
-  right: 5%;
+  right: 2%;
   padding: 0.5em;
   width: 15%;
   border-radius: 0.5em;
   outline: none;
   border: none;
-  background-color: purple;
+  background-image: url("trash.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: 2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   cursor: pointer;
   position: absolute;
 }
 #myCanvas {
-  border: 1px solid black;
+  border: 5px solid black;
   background-color: white;
+}
+#line:hover,
+#clear:hover,
+#rect:hover,
+#circle:hover,
+#erase:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 17%;
+}
+@media (max-width: 930px) {
+  #line,
+  #clear,
+  #rect,
+  #circle,
+  #erase {
+    width: 2%;
+    height: 7%;
+    color: transparent;
+  }
+  #myCanvas {
+    width: 300px;
+    height: 500px;
+    margin-top: 2em;
+  }
+  .top {
+    text-align: center;
+    padding-bottom: 0.8em;
+  }
 }
